# ngit-cli

./: .gitignore  pyproject.toml  readme.md  requirements.txt
executor/: executor.py
hpc/: gpu.sh  install.sh
src/: __init__.py  ngit.py  util.py
src/commands/: __init__.py  git.py
src/executor/: executor.py
tests/: basic_test.py  cpu_optimized_small.py  signal.py  small_model_test.py  smallest_model_test.py  ulitimate_optimization.py  watt_model_test.py
tools/: tools.py
